src/objects/Field_Sales_Project_Members__c.object
<CustomObject>
    <description>Used to track targets for sales for specified initiatives based on target lists, regional initiatives, or customer interactions.</description>
    <fields>
        <fullName>AccountPhone__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountProgramMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>https://dentsplysirona.lightning.force.com/lightning/r/Project__c/a1T6M0000050T5yUAE/view</description>
        <label>Account Program Member</label>
        <referenceTo>LoyaltyProgramParticipant__c</referenceTo>
        <relationshipLabel>Sales Leads</relationshipLabel>
        <relationshipName>Sales_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountVisitingCity__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <label>Account Visiting City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountVisitingPostalCode__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <label>Account Visiting Postal Code Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountVisitingState__c</fullName>
        <formula>Account__r.BillingState</formula>
        <label>Account Visiting State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountVisitingStreet__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <label>Account Visiting Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Postal_Code_Zip__c</fullName>
        <formula>Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Postal Code Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State_Province__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Leads</relationshipLabel>
        <relationshipName>Field_Sales_Project_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Upgrade</fullName>
                </value>
                <value>
                    <fullName>ACB with ASA</fullName>
                </value>
                <value>
                    <fullName>AH Plus</fullName>
                </value>
                <value>
                    <fullName>AH Plus Bioceramic Sealer</fullName>
                </value>
                <value>
                    <fullName>AH Temp</fullName>
                </value>
                <value>
                    <fullName>AlginX</fullName>
                </value>
                <value>
                    <fullName>All Ceramics</fullName>
                </value>
                <value>
                    <fullName>All Other Endo</fullName>
                </value>
                <value>
                    <fullName>All Other - Niti Rotary Files</fullName>
                </value>
                <value>
                    <fullName>All Other – Obturation</fullName>
                </value>
                <value>
                    <fullName>Anaestadent</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
                <value>
                    <fullName>ANKYLOS</fullName>
                </value>
                <value>
                    <fullName>Apex Locator</fullName>
                </value>
                <value>
                    <fullName>Aquasil</fullName>
                </value>
                <value>
                    <fullName>Aquasil Ultra Plus</fullName>
                </value>
                <value>
                    <fullName>ATIS</fullName>
                </value>
                <value>
                    <fullName>ATIS EV</fullName>
                </value>
                <value>
                    <fullName>ATIS TX</fullName>
                </value>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>Atlantis Abutments</fullName>
                </value>
                <value>
                    <fullName>Atlantis Suprastructures</fullName>
                </value>
                <value>
                    <fullName>Automate</fullName>
                </value>
                <value>
                    <fullName>Axano</fullName>
                </value>
                <value>
                    <fullName>Axeos</fullName>
                </value>
                <value>
                    <fullName>Azento Astra Tech</fullName>
                </value>
                <value>
                    <fullName>Azento EV</fullName>
                </value>
                <value>
                    <fullName>Azento XiVE</fullName>
                </value>
                <value>
                    <fullName>Bioceramic</fullName>
                </value>
                <value>
                    <fullName>Bioceramic Sealer</fullName>
                    <isActive>false</isActive>
                    <label>Bioceramic Sealer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignTargetList__c</fullName>
        <description>TFUS-000003881</description>
        <formula>IF (Campaign__c &lt;&gt; null,
  HYPERLINK(&apos;/&apos;+Campaign__r.Id, Campaign__r.Name, &quot;_self&quot;), 
  IF ( Field_Sales_Project__c &lt;&gt; null, 
      HYPERLINK(&apos;/&apos;+Field_Sales_Project__r.Id, Field_Sales_Project__r.Name, &quot;_self&quot;),
       &apos;&apos;
  )
)</formula>
        <label>Campaign/Target List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sales Leads</relationshipLabel>
        <relationshipName>SalesLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelledAssignedDate__c</fullName>
        <label>&quot;Cancelled&quot; Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UserCountry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3D Imaging</fullName>
                    <isActive>false</isActive>
                    <label>3D Imaging</label>
                </value>
                <value>
                    <fullName>ATLANTIS</fullName>
                    <isActive>false</isActive>
                    <label>ATLANTIS</label>
                </value>
                <value>
                    <fullName>CEREC Equipment</fullName>
                    <isActive>false</isActive>
                    <label>CEREC Equipment</label>
                </value>
                <value>
                    <fullName>Class II</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Digital Group</fullName>
                </value>
                <value>
                    <fullName>Digital Services</fullName>
                </value>
                <value>
                    <fullName>Digital Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Digital Solutions</label>
                </value>
                <value>
                    <fullName>Endentulous</fullName>
                    <isActive>false</isActive>
                    <label>Endentulous</label>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment &amp; Imaging</fullName>
                </value>
                <value>
                    <fullName>Extra Oral Imaging</fullName>
                    <isActive>false</isActive>
                    <label>Extra Oral Imaging</label>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>InLab</fullName>
                    <isActive>false</isActive>
                    <label>InLab</label>
                </value>
                <value>
                    <fullName>Intra Oral Imaging</fullName>
                    <isActive>false</isActive>
                    <label>Intra Oral Imaging</label>
                </value>
                <value>
                    <fullName>Midwest Equipment</fullName>
                    <isActive>false</isActive>
                    <label>Midwest Equipment</label>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                    <isActive>false</isActive>
                    <label>Preventive</label>
                </value>
                <value>
                    <fullName>Procedures</fullName>
                    <isActive>false</isActive>
                    <label>Procedures</label>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Regenerative</fullName>
                    <isActive>false</isActive>
                    <label>Regenerative</label>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                    <isActive>false</isActive>
                    <label>Restorative</label>
                </value>
                <value>
                    <fullName>Root To Crown</fullName>
                </value>
                <value>
                    <fullName>Single Unit Crown</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                    <isActive>false</isActive>
                    <label>Treatment Centers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelPriority__c</fullName>
        <formula>IF(OR(TEXT(Status__c)=&apos;New&apos;, TEXT(Status__c)=&apos;In progress&apos;),
    CASE(Channel__c,&apos;Sales&apos;, 1,&apos;Marketing&apos;, 2, &apos;Program List&apos;, 3,&apos;Event&apos;, 3, 5),
    IF(TEXT(Status__c)= &apos;Parked/OnHold&apos;, 4, 5)
 )</formula>
        <inlineHelpText>1 = Active - Sales / Peer to Peer
2 = Active - Marketing / Web Form
3 = Active - Program List / Target Analysis
3 = Active - Event / Local Event, Tradeshow etc.
4 = Parked / On Hold
5 = Completed / Cancelled / Expired</inlineHelpText>
        <label>Channel Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IF (Campaign__c &lt;&gt; null,
    Campaign__r.Channel__c,
    IF (Field_Sales_Project__c &lt;&gt; null , IF (TEXT(Source__c) &lt;&gt; &apos;Peer to peer&apos;, &apos;Program List&apos;,&apos;Sales&apos;), &apos;Sales&apos;)           
)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <inlineHelpText>The date when the Sales Lead was either Converted (into an Opportunity or Order) or Closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompletedAssignedDate__c</fullName>
        <label>&quot;Completed&quot; Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Leads</relationshipLabel>
        <relationshipName>Initiative_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_to__c</fullName>
        <label>Converted to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Account_Program_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>220210  TFUS-000003857:  Field used to convert a sales lead directly into an account program member</description>
        <label>Create Account Program Member ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByMe__c</fullName>
        <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
        <label>Created By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByMyDirectReports__c</fullName>
        <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
        <label>Created By My Direct Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CrossSellProspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross-sell sales lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomerNotes__c</fullName>
        <inlineHelpText>Information added by the customer/contact when filling a webform as part of a digital campaign</inlineHelpText>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 5) OR (2 AND 3 AND 4)</booleanFilter>
            <errorMessage>You must select a distributor.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>ERP Distributor, Non-ERP Distributor, DNA Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CIM Account</value>
            </filterItems>
            <filterItems>
                <field>Account.OneAccount_Type__c</field>
                <operation>equals</operation>
                <value>Distributor, DNA Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.DistributorCategories__c</field>
                <operation>notContain</operation>
                <valueField>$Source.Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account.DistributorCategories__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Leads (Distributor)</relationshipLabel>
        <relationshipName>Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpiredAssignedDate__c</fullName>
        <label>&quot;Expired&quot; Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Sales_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Target List</label>
        <referenceTo>Field_Sales_Project__c</referenceTo>
        <relationshipName>Field_Sales_Project_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hot_prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot sales lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_My_Lead__c</fullName>
        <formula>IF( ISBLANK($User.Movex_Uer_ID__c),FALSE, CONTAINS( Account__r.DC_ETM_Code__c , $User.Movex_Uer_ID__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS My Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InProgressAssignedDate__c</fullName>
        <label>&quot;In Progress&quot; Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntentionToBuyDate__c</fullName>
        <label>Intention to buy date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsOwnerSuggestedOwner__c</fullName>
        <description>TFUS-000002725</description>
        <formula>Sales_Rep__c = SuggestedOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner Suggested Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyLead__c</fullName>
        <formula>IF(Sales_Rep__c =  $User.Id, true, false)</formula>
        <label>My lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <formula>Name + &apos; (&apos; + TEXT(Brand__c) + &apos;)&apos;</formula>
        <label>Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OneSFid__c</fullName>
        <formula>Account__r.OneSF_Id__c</formula>
        <label>OneSFid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Initiative_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <label>Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Sales Leads</relationshipLabel>
        <relationshipName>Sales_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnedByMyDirectReport__c</fullName>
        <formula>IF(Sales_Rep__r.ManagerId = $User.Id , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned by My Direct Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerFullName__c</fullName>
        <description>Displays the owner full name</description>
        <formula>Sales_Rep__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerFullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParkedOnHoldAssignedDate__c</fullName>
        <label>&quot;Parked/On Hold&quot; Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>This field is used to rank Analytic based Target List Leads</inlineHelpText>
        <label>Program List Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_List_Wave__c</fullName>
        <label>Program List Wave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Lost/cancelled</fullName>
                </value>
                <value>
                    <fullName>Lost interest</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Unqualified / Not Relevant</fullName>
                </value>
                <value>
                    <fullName>Place (Level of Service Delivery)</fullName>
                    <isActive>false</isActive>
                    <label>Place (Level of Service Delivery)</label>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                    <isActive>false</isActive>
                    <label>Unqualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ad hoc analysis</fullName>
                    <isActive>false</isActive>
                    <label>Ad hoc analysis</label>
                </value>
                <value>
                    <fullName>Case</fullName>
                    <isActive>false</isActive>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Clinical Education Event</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                    <isActive>false</isActive>
                    <label>Contact Center</label>
                </value>
                <value>
                    <fullName>Customer Contact</fullName>
                    <isActive>false</isActive>
                    <label>Customer Contact</label>
                </value>
                <value>
                    <fullName>Dealer Sales Rep</fullName>
                    <isActive>false</isActive>
                    <label>Dealer Sales Rep</label>
                </value>
                <value>
                    <fullName>Email campaign</fullName>
                    <isActive>false</isActive>
                    <label>Email Campaign</label>
                </value>
                <value>
                    <fullName>Event</fullName>
                    <isActive>false</isActive>
                    <label>Event</label>
                </value>
                <value>
                    <fullName>Event Follow-Up</fullName>
                    <isActive>false</isActive>
                    <label>Event Follow-Up</label>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                    <isActive>false</isActive>
                    <label>External Referral</label>
                </value>
                <value>
                    <fullName>Local Event</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Peer to peer</fullName>
                    <default>true</default>
                    <label>Peer to peer</label>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                    <isActive>false</isActive>
                    <label>Social Media</label>
                </value>
                <value>
                    <fullName>Target Analysis</fullName>
                </value>
                <value>
                    <fullName>Trade show</fullName>
                    <label>Trade Show/Congress</label>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Parked/OnHold</fullName>
                    <label>Parked/On Hold</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>To Call</fullName>
                </value>
                <value>
                    <fullName>Answered - Call Back Later</fullName>
                </value>
                <value>
                    <fullName>No Answer - Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Call Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <isActive>false</isActive>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>Parked</fullName>
                    <isActive>false</isActive>
                    <label>Parked</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Extraoral Imaging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuggestedOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TFUS-000002725</description>
        <label>Suggested Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territories_Assigned__c</fullName>
        <formula>Account__r.TerritoryUsers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territories Assigned</label>
        <type>Text</type>
    </fields>
</CustomObject>